--- a/master_thesis/gee/Download_LSTaqua.ipynb
+++ b/master_thesis/gee/Download_LSTaqua.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "965ef1efff2d403f89da2f450630aa2d",
+       "model_id": "cc74965e22be4c17a9cb4e86da35f6d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,19 +55,31 @@
     "Map = geemap.Map()\n",
     "kazbegi = ee.FeatureCollection(\"users/andihanzl/kazbegi\");\n",
     "Map.centerObject(kazbegi, 10)\n",
+    "geometry =ee.Geometry.Polygon(\n",
+    "        [[[44.16644286751663, 42.600127655106185],\n",
+    "          [44.23510741829788, 42.5394457299407],\n",
+    "          [44.38067626595413, 42.48073042443687],\n",
+    "          [44.54547118782913, 42.456418303462],\n",
+    "          [44.72674560189163, 42.46452339297412],\n",
+    "          [44.87231444954788, 42.533374290609736],\n",
+    "          [44.90252685189163, 42.61023556954571],\n",
+    "          [44.80364989876663, 42.76367391712233],\n",
+    "          [44.56469726204788, 42.80398943064146],\n",
+    "          [44.16369628548538, 42.70315142463515]]]);\n",
     "Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Count:  11\n"
+      "Count:  365\n",
+      "Count:  287\n"
      ]
     }
    ],
@@ -76,17 +88,20 @@
     "            .merge(ee.ImageCollection('MODIS/006/MYD10A1')) \\\n",
     "            .select(['NDSI_Snow_Cover'],['Snow']) \\\n",
     "            .filterBounds(kazbegi) \\\n",
-    "            .filter(ee.Filter.date('2000-01-01', '2003-12-31'))\n",
+    "            .filterDate('2000-02-26', '2000-12-31')\n",
     "\n",
     "res = snow.first().projection()\n",
     "\n",
     "snow = snow.map(lambda image: image.reproject(res).clip(kazbegi))\n",
     "\n",
     "lst = ee.ImageCollection('MODIS/006/MYD11A1') \\\n",
-    "        .filter(ee.Filter.date('2021-03-28', '2022-01-01')) \\\n",
+    "        .filterDate('2005-01-01', '2006-01-01') \\\n",
     "        .select(['LST_Day_1km']) \\\n",
     "        .sort('system:time_start')\n",
-    "lst = lst.map(lambda image: image.resample('bicubic').reproject(res).clip(kazbegi).rename('LST'))\n",
+    "count = lst.size()\n",
+    "print('Count: ', count.getInfo())\n",
+    "\n",
+    "lst = lst.map(lambda image: image.resample('bilinear').reproject(res).clip(geometry).rename('LST'))\n",
     "lst = lst.map(lambda image: image.expression('LST * 0.02 - 273.15', {'LST': image}) \\\n",
     "              .copyProperties(image, ['system:time_start']))\n",
     "lst = lst.sort('system:time_start')\n",
@@ -109,7 +124,7 @@
     "    #number as output\n",
     "    return image.set('percCover', percCover);\n",
     "\n",
-    "lst = lst.map(lambda image: getCover(image, kazbegi, 500))\n",
+    "lst = lst.map(lambda image: getCover(image, geometry, 500))\n",
     "lst = lst.filter(ee.Filter.gt('percCover', 0.000000000000001))\n",
     "lst = lst.sort(\"system:time_start\")\n",
     "\n",
@@ -123,12 +138,13 @@
     "}\n",
     "\n",
     "#Map.addLayer(snow_mask, vis_params, \"Snow Mask\")\n",
-    "Map.addLayer(lst.first(), vis_params, \"Land Surface Temp\")"
+    "Map.addLayer(lst.first(), vis_params, \"Land Surface Temp\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -159,26 +175,6 @@
     "# Initialize the Earth Engine library.\n",
     "ee.Initialize()\n",
     "\n",
-    "# NDVI functions for Landsat and MODIS\n",
-    "def getNDVI_mod(image):\n",
-    "   return image.addBands(image.normalizedDifference(['sur_refl_b02','sur_refl_b01']).rename('NDVI'))\n",
-    "\n",
-    "def getNDVI_l8(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B5','B4']).rename('NDVI'))\n",
-    "\n",
-    "def getNDVI_l57(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B4','B3']).rename('NDVI'))\n",
-    "\n",
-    "# NDWI functions for Landsat and MODIS\n",
-    "def getNDWI_mod(image):\n",
-    "   return image.addBands(image.normalizedDifference(['sur_refl_b02','sur_refl_b05']).rename('NDWI'))\n",
-    "\n",
-    "def getNDWI_l8(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B5','B6']).rename('NDWI'))\n",
-    "\n",
-    "def getNDWI_l57(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B4','B5']).rename('NDWI'))\n",
-    "\n",
     "# fill all NA-values with a fill values of -999999 \n",
     "def na_to_num(image):\n",
     "    image_wo_na = image.unmask(-999999)\n",
@@ -196,24 +192,6 @@
     "    mosaic_imlist = unique_dates.map(lambda d: helper_function(d, imcol))\n",
     "    return ee.ImageCollection(mosaic_imlist)\n",
     "\n",
-    "# get the cover of how much of the area is covered with pixel\n",
-    "def getCover(image, aoi, scale):\n",
-    "    #calculate the number of inputs\n",
-    "    totPixels = ee.Number(image.unmask(1).reduceRegion(reducer = ee.Reducer.count(),\n",
-    "                                                       scale = scale,\n",
-    "                                                       geometry = aoi)\n",
-    "                          .values().get(0))\n",
-    "    \n",
-    "    #calculate the actual amount of pixels inside the aoi\n",
-    "    actPixels = ee.Number(image.reduceRegion(reducer = ee.Reducer.count(),\n",
-    "                                             scale = scale,\n",
-    "                                             geometry = aoi)\n",
-    "                          .values().get(0))\n",
-    "    #calculate the perc of cover\n",
-    "    percCover = actPixels.divide(totPixels).multiply(100).round()    \n",
-    "    #number as output\n",
-    "    return image.set('percCover', percCover);\n",
-    "\n",
     "def ymdList(imgcol):\n",
     "    def iter_func(image, newlist):\n",
     "        date = ee.Number.parse(image.date().format(\"yyyyMMdd\"));\n",
@@ -225,7 +203,7 @@
     "\n",
     "# convert the gee objects into numpys and then into Geotiffs\n",
     "def gee_to_numpy(img, bounds, poly, indexname):\n",
-    "    path_orig = 'original_files_'+indexname+'/'\n",
+    "    path_orig = 'newfiles_'+indexname+'/'\n",
     "    # get the lat lon and add the ndvi\n",
     "    latlon = ee.Image.pixelLonLat().addBands(img)\n",
     "\n",
@@ -297,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,9 +323,9 @@
     "           })\n",
     "    \n",
     "  #  sat_df = pd.merge(modis_df, landsat_df, how='left')\n",
-    "    poly = 'p'+str(polygonname)  #create a polygon label\n",
+    "    poly = str(polygonname)  #create a polygon label\n",
     "\n",
-    "    sat_df.to_csv(r'.\\datetables_LSTinC\\polygon_' + poly + '.csv')\n",
+    "    sat_df.to_csv(r'.\\datetables_lst\\lstaqua2005' + poly + '.csv')\n",
     "       \n",
     "    \n",
     "  #  x = -1\n",
@@ -374,11 +352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_imagery(lst, kazbegi, 'aqua', 1)"
+    "download_imagery(lst, geometry, 'aqua', 1)"
    ]
   },
   {
@@ -414,18 +392,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
