--- a/master_thesis/gee/Download_Prec.ipynb
+++ b/master_thesis/gee/Download_Prec.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "769f8e6c3c1046ef84c98418a95ac591",
+       "model_id": "2b1a33f52097431da72d05c84f663a08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,12 +55,23 @@
     "Map = geemap.Map()\n",
     "kazbegi = ee.FeatureCollection(\"users/andihanzl/kazbegi\");\n",
     "Map.centerObject(kazbegi, 10)\n",
+    "geometry =ee.Geometry.Polygon(\n",
+    "        [[[44.16644286751663, 42.600127655106185],\n",
+    "          [44.23510741829788, 42.5394457299407],\n",
+    "          [44.38067626595413, 42.48073042443687],\n",
+    "          [44.54547118782913, 42.456418303462],\n",
+    "          [44.72674560189163, 42.46452339297412],\n",
+    "          [44.87231444954788, 42.533374290609736],\n",
+    "          [44.90252685189163, 42.61023556954571],\n",
+    "          [44.80364989876663, 42.76367391712233],\n",
+    "          [44.56469726204788, 42.80398943064146],\n",
+    "          [44.16369628548538, 42.70315142463515]]]);\n",
     "Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +87,7 @@
     "            .merge(ee.ImageCollection('MODIS/006/MYD10A1')) \\\n",
     "            .select(['NDSI_Snow_Cover'],['Snow']) \\\n",
     "            .filterBounds(kazbegi) \\\n",
-    "            .filter(ee.Filter.date('2000-01-01', '2003-12-31'))\n",
+    "            .filterDate('2000-02-26', '2000-12-31')\n",
     "\n",
     "res = snow.first().projection()\n",
     "\n",
@@ -84,30 +95,9 @@
     "\n",
     "prec = ee.ImageCollection('UCSB-CHG/CHIRPS/DAILY') \\\n",
     "            .select('precipitation') \\\n",
-    "            .filter(ee.Filter.date('2000-01-01', '2005-01-01'))\n",
+    "            .filterDate('2000-01-01', '2005-01-01')\n",
     "\n",
-    "prec = prec.map(lambda image: image.resample('bilinear').reproject(res).clip(kazbegi).rename('Prec'))\n",
-    "\n",
-    "\n",
-    "def getCover(image, aoi, scale):\n",
-    "    #calculate the number of inputs\n",
-    "    totPixels = ee.Number(image.unmask(1).reduceRegion(reducer = ee.Reducer.count(),\n",
-    "                                                       scale = scale,\n",
-    "                                                       geometry = aoi)\n",
-    "                          .values().get(0))\n",
-    "    \n",
-    "    #calculate the actual amount of pixels inside the aoi\n",
-    "    actPixels = ee.Number(image.reduceRegion(reducer = ee.Reducer.count(),\n",
-    "                                             scale = scale,\n",
-    "                                             geometry = aoi)\n",
-    "                          .values().get(0))\n",
-    "    #calculate the perc of cover\n",
-    "    percCover = actPixels.divide(totPixels).multiply(100).round()    \n",
-    "    #number as output\n",
-    "    return image.set('percCover', percCover);\n",
-    "\n",
-    "prec = prec.map(lambda image: getCover(image, kazbegi, 500))\n",
-    "prec = prec.filter(ee.Filter.gt('percCover', 0.000000000000001))\n",
+    "prec = prec.map(lambda image: image.resample('bilinear').reproject(res).clip(geometry).rename('Prec'))\n",
     "prec = prec.sort(\"system:time_start\")\n",
     "\n",
     "count = prec.size()\n",
@@ -125,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,24 +161,6 @@
     "    mosaic_imlist = unique_dates.map(lambda d: helper_function(d, imcol))\n",
     "    return ee.ImageCollection(mosaic_imlist)\n",
     "\n",
-    "# get the cover of how much of the area is covered with pixel\n",
-    "def getCover(image, aoi, scale):\n",
-    "    #calculate the number of inputs\n",
-    "    totPixels = ee.Number(image.unmask(1).reduceRegion(reducer = ee.Reducer.count(),\n",
-    "                                                       scale = scale,\n",
-    "                                                       geometry = aoi)\n",
-    "                          .values().get(0))\n",
-    "    \n",
-    "    #calculate the actual amount of pixels inside the aoi\n",
-    "    actPixels = ee.Number(image.reduceRegion(reducer = ee.Reducer.count(),\n",
-    "                                             scale = scale,\n",
-    "                                             geometry = aoi)\n",
-    "                          .values().get(0))\n",
-    "    #calculate the perc of cover\n",
-    "    percCover = actPixels.divide(totPixels).multiply(100).round()    \n",
-    "    #number as output\n",
-    "    return image.set('percCover', percCover);\n",
-    "\n",
     "def ymdList(imgcol):\n",
     "    def iter_func(image, newlist):\n",
     "        date = ee.Number.parse(image.date().format(\"yyyyMMdd\"));\n",
@@ -200,7 +172,7 @@
     "\n",
     "# convert the gee objects into numpys and then into Geotiffs\n",
     "def gee_to_numpy(img, bounds, poly, indexname):\n",
-    "    path_orig = 'original_files_'+indexname+'/'\n",
+    "    path_orig = 'newfiles_'+indexname+'/'\n",
     "    # get the lat lon and add the ndvi\n",
     "    latlon = ee.Image.pixelLonLat().addBands(img)\n",
     "\n",
@@ -272,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_imagery(prec, kazbegi, '_prec', 1)"
+    "download_imagery(prec, geometry, '_prec', 1)"
    ]
   },
   {
