--- a/master_thesis/gee/Download_RAD.ipynb
+++ b/master_thesis/gee/Download_RAD.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c9f7d6ad5324dcb8ed2da0db13b5bf9",
+       "model_id": "f686f311dfa64c479c58124d069897b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,20 +55,31 @@
     "Map = geemap.Map()\n",
     "kazbegi = ee.FeatureCollection(\"users/andihanzl/kazbegi\");\n",
     "Map.centerObject(kazbegi, 10)\n",
+    "geometry =ee.Geometry.Polygon(\n",
+    "        [[[44.16644286751663, 42.600127655106185],\n",
+    "          [44.23510741829788, 42.5394457299407],\n",
+    "          [44.38067626595413, 42.48073042443687],\n",
+    "          [44.54547118782913, 42.456418303462],\n",
+    "          [44.72674560189163, 42.46452339297412],\n",
+    "          [44.87231444954788, 42.533374290609736],\n",
+    "          [44.90252685189163, 42.61023556954571],\n",
+    "          [44.80364989876663, 42.76367391712233],\n",
+    "          [44.56469726204788, 42.80398943064146],\n",
+    "          [44.16369628548538, 42.70315142463515]]]);\n",
     "Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hour: 8\n",
-      "Count:  2070\n"
+      "Hour: 10\n",
+      "Count:  2\n"
      ]
     }
    ],
@@ -84,14 +95,14 @@
     "snow = snow.map(lambda image: image.reproject(res).clip(kazbegi))\n",
     "\n",
     "rad = ee.ImageCollection('ECMWF/ERA5_LAND/HOURLY') \\\n",
-    "        .filterDate('2000-05-01', '2005-12-31') \\\n",
+    "        .filterDate('2002-12-31', '2003-01-02') \\\n",
     "        .select(['surface_solar_radiation_downwards']) \\\n",
     "        .sort('system:time_start')\n",
     "\n",
-    "rad = rad.map(lambda image: image.resample('bilinear').reproject(res).clip(kazbegi).rename('RAD'))\n",
+    "rad = rad.map(lambda image: image.resample('bilinear').reproject(res).clip(geometry).rename('RAD'))\n",
     "rad = rad.sort('system:time_start')\n",
     "\n",
-    "rad = rad.filterMetadata('hour', 'equals', 8);\n",
+    "rad = rad.filterMetadata('hour', 'equals', 10);\n",
     "\n",
     "#Get the timestamp and convert it to a date.\n",
     "hour = rad.first().get('hour')\n",
@@ -113,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Users\\\\andre\\\\OneDrive\\\\Dokumente\\\\Masterarbeit\\\\GEE\\\\Download_Leonie', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\python37.zip', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\DLLs', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm', '', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\andre\\\\.ipython', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/']\n"
+      "['C:\\\\Users\\\\andre\\\\OneDrive\\\\Dokumente\\\\Masterarbeit\\\\GEE\\\\Download_Leonie', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\python37.zip', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\DLLs', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm', '', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\andre\\\\.ipython', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/']\n"
      ]
     }
    ],
@@ -172,7 +183,7 @@
     "\n",
     "# convert the gee objects into numpys and then into Geotiffs\n",
     "def gee_to_numpy(img, bounds, poly, indexname):\n",
-    "    path_orig = 'original_files_'+indexname+'/'\n",
+    "    path_orig = 'newfiles_'+indexname+'/'\n",
     "    # get the lat lon and add the ndvi\n",
     "    latlon = ee.Image.pixelLonLat().addBands(img)\n",
     "\n",
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_imagery(rad, kazbegi, 'terra', 1)"
+    "download_imagery(rad, geometry, 'aqua', 1)"
    ]
   },
   {
