--- a/master_thesis/gee/Download_SNOWaqua.ipynb
+++ b/master_thesis/gee/Download_SNOWaqua.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbac68361d75485bb9fcfad7c2279049",
+       "model_id": "10874a810b0f4686858a8083a99a5e9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,33 +55,50 @@
     "Map = geemap.Map()\n",
     "kazbegi = ee.FeatureCollection(\"users/andihanzl/kazbegi\");\n",
     "Map.centerObject(kazbegi, 10)\n",
+    "geometry =ee.Geometry.Polygon(\n",
+    "        [[[44.16644286751663, 42.600127655106185],\n",
+    "          [44.23510741829788, 42.5394457299407],\n",
+    "          [44.38067626595413, 42.48073042443687],\n",
+    "          [44.54547118782913, 42.456418303462],\n",
+    "          [44.72674560189163, 42.46452339297412],\n",
+    "          [44.87231444954788, 42.533374290609736],\n",
+    "          [44.90252685189163, 42.61023556954571],\n",
+    "          [44.80364989876663, 42.76367391712233],\n",
+    "          [44.56469726204788, 42.80398943064146],\n",
+    "          [44.16369628548538, 42.70315142463515]]]);\n",
     "Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Count:  232\n",
-      "Count:  188\n"
+      "Count:  1098\n",
+      "Count:  854\n"
      ]
     }
    ],
    "source": [
-    "snow = ee.ImageCollection('MODIS/006/MYD10A1') \\\n",
+    "snow_orig = ee.ImageCollection('MODIS/006/MOD10A1') \\\n",
+    "            .merge(ee.ImageCollection('MODIS/006/MYD10A1')) \\\n",
     "            .select(['NDSI_Snow_Cover'],['Snow']) \\\n",
     "            .filterBounds(kazbegi) \\\n",
-    "            .filter(ee.Filter.date('2020-08-11', '2022-01-01')) \\\n",
+    "            .filterDate('2000-02-26', '2000-12-31')\n",
+    "\n",
+    "res = snow_orig.first().projection()\n",
+    "\n",
+    "snow = ee.ImageCollection('MODIS/006/MYD10A1') \\\n",
+    "            .select(['NDSI_Snow_Cover'],['Snow']) \\\n",
+    "            .filter(ee.Filter.date('2002-12-30', '2006-01-01')) \\\n",
     "            .sort('system:time_start')\n",
     "\n",
-    "res = snow.first().projection()\n",
-    "\n",
-    "snow = snow.map(lambda image: image.reproject(res).clip(kazbegi))\n",
+    "snow = snow.map(lambda image: image.reproject(res).clip(geometry))\n",
+    "snow = snow.sort('system:time_start')\n",
     "\n",
     "count = snow.size()\n",
     "print('Count: ', count.getInfo())\n",
@@ -112,8 +129,8 @@
     "print('Count: ', count.getInfo())\n",
     "\n",
     "vis_params = {\n",
-    "      'min': -1,\n",
-    "      'max': 1,\n",
+    "      'min': 0,\n",
+    "      'max': 100,\n",
     "      'palette': ['blue', 'red']\n",
     "}\n",
     "\n",
@@ -124,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Users\\\\andre\\\\OneDrive\\\\Dokumente\\\\Masterarbeit\\\\GEE\\\\Download_Leonie', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\python37.zip', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\DLLs', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm', '', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\andre\\\\.ipython', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/']\n"
+      "['C:\\\\Users\\\\andre\\\\OneDrive\\\\Dokumente\\\\Masterarbeit\\\\GEE\\\\Download_Leonie', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\python37.zip', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\DLLs', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm', '', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\andre\\\\.ipython', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/']\n"
      ]
     }
    ],
@@ -154,26 +171,6 @@
     "\n",
     "# Initialize the Earth Engine library.\n",
     "ee.Initialize()\n",
-    "\n",
-    "# NDVI functions for Landsat and MODIS\n",
-    "def getNDVI_mod(image):\n",
-    "   return image.addBands(image.normalizedDifference(['sur_refl_b02','sur_refl_b01']).rename('NDVI'))\n",
-    "\n",
-    "def getNDVI_l8(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B5','B4']).rename('NDVI'))\n",
-    "\n",
-    "def getNDVI_l57(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B4','B3']).rename('NDVI'))\n",
-    "\n",
-    "# NDWI functions for Landsat and MODIS\n",
-    "def getNDWI_mod(image):\n",
-    "   return image.addBands(image.normalizedDifference(['sur_refl_b02','sur_refl_b05']).rename('NDWI'))\n",
-    "\n",
-    "def getNDWI_l8(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B5','B6']).rename('NDWI'))\n",
-    "\n",
-    "def getNDWI_l57(image):\n",
-    "    return image.addBands(image.normalizedDifference(['B4','B5']).rename('NDWI'))\n",
     "\n",
     "# fill all NA-values with a fill values of -999999 \n",
     "def na_to_num(image):\n",
@@ -221,7 +218,7 @@
     "\n",
     "# convert the gee objects into numpys and then into Geotiffs\n",
     "def gee_to_numpy(img, bounds, poly, indexname):\n",
-    "    path_orig = 'original_files_'+indexname+'/'\n",
+    "    path_orig = 'newfiles_'+indexname+'/'\n",
     "    # get the lat lon and add the ndvi\n",
     "    latlon = ee.Image.pixelLonLat().addBands(img)\n",
     "\n",
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +338,7 @@
     "           })\n",
     "    \n",
     "  #  sat_df = pd.merge(modis_df, landsat_df, how='left')\n",
-    "    poly = 'p'+str(polygonname)  #create a polygon label\n",
+    "    poly = str(polygonname)  #create a polygon label\n",
     "\n",
     "    sat_df.to_csv(r'.\\datetables_NDSI\\polygon_' + poly + '.csv')\n",
     "       \n",
@@ -370,11 +367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_imagery(snow, kazbegi, 'aqua', 1)"
+    "download_imagery(snow, geometry, 'aqua', 1)"
    ]
   },
   {
